# gitmergelogin

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  merge.h
src/: main.cpp
